# MVPL

./: .clang-format  .clang-tidy  .code_runner.json  .gitignore  .lvimrc  CMakeLists.txt  CPPLINT.cfg  README.md  architecture.uml  build_benchmarks.sh  build_main.sh  build_tests.sh  create_compile_time_trace.sh  profile_compile_time.sh  run_benchmarks.sh  run_main.sh  run_tests.sh  runtime_flags.env  runtime_flags_lldb.env
.github/: config.yml
.github/workflows/: testing.yml
antlr/: CMakeLists.txt  expr.g  mvpl.g4  parser.cpp  program.foo
benchmarks/: CMakeLists.txt  parser_benchmarks.cpp
data/: main.mvpl
src/: CMakeLists.txt  builtin_functions.cpp  builtin_functions.hpp  code_generator.cpp  instruction.cpp  instruction.hpp  lexer.cpp  lexer.hpp  main.cpp  opcodes.hpp  parser.cpp  parser.hpp  register_machine.cpp  util.cpp  util.hpp
src/backend/: instruction.cpp  instruction.hpp  opcode.hpp  trap.hpp
src/backend/code_generator/: code_generator.cpp  code_generator.hpp
src/backend/interpreter/: builtin_functions.cpp  builtin_functions.hpp  register_machine.cpp  register_machine.hpp
src/common/: enum_range.hpp  macros.hpp  source_location.hpp  util.cpp  util.hpp
src/frontend/lexer/: lexer.cpp  lexer.hpp  token.hpp  token_type.hpp
src/frontend/parser/: ast_node.cpp  ast_node.hpp  ast_node_type.hpp  finite_state_machine.cpp  finite_state_machine.hpp  operator_type.hpp  parse_error.cpp  parse_error.hpp  parser.cpp  parser.hpp  parser_combinators.hpp  state.hpp  util.cpp  util.hpp
src/frontend/parser/ast_operations/: add_parent.hpp  find_node.hpp  list_nodes.hpp  print.cpp  print.hpp  retrieve_source_location.hpp  retrieve_symbol_identifier.hpp  stringify_semantic_error.hpp
src/frontend/semantic_analysis/: scope_node.hpp  semantic_error.cpp  semantic_error.hpp  symbol.hpp  symbol_identifier.cpp  symbol_identifier.hpp  symbol_table.cpp  symbol_table.hpp  symbol_type.hpp
src/types/: ast_node.hpp  ast_node_type.hpp  enum_range.hpp  lexeme.hpp  opcode.hpp  token.hpp  token_type.hpp  tokens.hpp  trap.hpp
tests/: CMakeLists.txt
tests/frontend/parser/: parser_tests.cpp
